xidlc/tests/invalid/http_stream_client_sse.idl
#pragma xidlc package xidlc
#pragma xidlc version v1.0.0

interface InvalidClientStreamCodecService {
    @client_stream
    @stream_codec("sse")
    @post(path = "/upload")
    string upload(sequence<octet> chunk);
};
